--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": [
+      "@fuel-wallet/sdk"
+    ],
   },
   "include": [
     "src"
